@@ -223,6 +223,25 @@ GtkWidget *wxInfoBar::GTKAddButton(wxWindowID btnid, const wxString& label)
     return button;
 }
 
+size_t wxInfoBar::GetButtonCount() const
+{
+    if ( !UseNative() )
+        return wxInfoBarGeneric::GetButtonCount();
+
+    return m_impl->m_buttons.size();
+}
+
+wxWindowID wxInfoBar::GetButtonId(size_t idx) const
+{
+    if ( !UseNative() )
+        return wxInfoBarGeneric::GetButtonId(idx);
+
+    wxCHECK_MSG( idx < m_impl->m_buttons.size(), wxID_NONE,
+                 "Invalid infobar button position" );
+
+    return m_impl->m_buttons[idx].id;
+}
+
 void wxInfoBar::AddButton(wxWindowID btnid, const wxString& label)
 {
     if ( !UseNative() )
@@ -242,6 +261,24 @@ void wxInfoBar::AddButton(wxWindowID btnid, const wxString& label)
     GtkWidget * const button = GTKAddButton(btnid, label);
     if ( button )
         m_impl->m_buttons.push_back(wxInfoBarGTKImpl::Button(button, btnid));
+}
+
+bool wxInfoBar::HasButtonId(wxWindowID btnid) const
+{
+    if ( !UseNative() )
+        return wxInfoBarGeneric::HasButtonId(btnid);
+
+    // as in the generic version, look for the button starting from the end
+    const wxInfoBarGTKImpl::Buttons& buttons = m_impl->m_buttons;
+    for ( wxInfoBarGTKImpl::Buttons::const_reverse_iterator i = buttons.rbegin();
+          i != buttons.rend();
+          ++i )
+    {
+        if ( i->id == btnid )
+            return true;
+    }
+
+    return false;
 }
 
 void wxInfoBar::RemoveButton(wxWindowID btnid)
